crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_css_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --css-formatter-trailing-newline=false test.css
```

## `test.css`

```css
.test {
  color: red;
}
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
