crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_css_via_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.css
```

## `biome.json`

```json
{
  "files": {
    "includes": ["**/*.css"]
  },
  "css": {
    "formatter": {
      "trailingNewline": false
    }
  }
}
```

## `test.css`

```css
.test {
  color: red;
}
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
