crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_graphql_via_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.graphql
```

## `biome.json`

```json
{
  "files": {
    "includes": ["**/*.graphql"]
  },
  "graphql": {
    "formatter": {
      "trailingNewline": false
    }
  }
}
```

## `test.graphql`

```graphql
type Query {
	hello: String
}
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
