crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_html_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --html-formatter-trailing-newline=false test.html
```

## `biome.json`

```json
{
  "html": {
    "formatter": {
      "enabled": true
    }
  }
}
```

## `test.html`

```html
<!doctype html>
<html>
	<body>
		Hello
	</body>
</html>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
