crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_html_via_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.html
```

## `biome.json`

```json
{
  "files": {
    "includes": ["**/*.html"]
  },
  "html": {
    "formatter": {
      "enabled": true,
      "trailingNewline": false
    }
  }
}
```

## `test.html`

```html
<!doctype html>
<html>
	<body>
		Hello
	</body>
</html>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
