crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_javascript_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --javascript-formatter-trailing-newline=false test.js
```

## `test.js`

```js
const a = 1;
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
