crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_javascript_via_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js
```

## `biome.json`

```json
{
  "files": {
    "includes": ["**/*.js"]
  },
  "javascript": {
    "formatter": {
      "trailingNewline": false
    }
  }
}
```

## `test.js`

```js
const a = 1;
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
