crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_json_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --json-formatter-trailing-newline=false test.json
```

## `test.json`

```json
{ "name": "test" }
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
