crates/biome_cli/tests/snapshots/main_commands_format/trailing_newline_json_via_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.json
```

## `biome.json`

```json
{
  "json": {
    "formatter": {
      "trailingNewline": false
    }
  }
}
```

## `test.json`

```json
{ "name": "test" }
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
