crates/biome_cli/tests/snapshots/main_commands_format/treat_known_json_files_as_jsonc_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format files/.eslintrc.json files/.jshintrc files/.babelrc
```

## `files/.babelrc`

```babelrc

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

## `files/.eslintrc.json`

```json

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

## `files/.jshintrc`

```jshintrc

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
files/.eslintrc.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - /*test*/·[
    3   │ - 
    4   │ - /*·some·other·comment*/1,·2,·3]
    5   │ - → 
      1 │ + /*test*/·[/*·some·other·comment*/·1,·2,·3]
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
