crates/biome_cli/tests/snapshots/main_commands_format/treat_known_json_files_as_jsonc_files_stdin.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

# Emitted Messages

```block
/*test*/ [/* some other comment*/ 1, 2, 3]

```
